fix(switch): high contrast unchecked state

--- a/src/components/_switch.scss
+++ b/src/components/_switch.scss
@@ -76,7 +76,7 @@ button[role="switch"] {
 	}
 
 	@media (prefers-contrast: more) {
-		&,
+		&[aria-checked="false"],
 		&:hover,
 		&:focus,
 		&:active,
